# nodes-web

./: .gitignore  CMakeLists.txt  Gemfile  README.md  local.sh  nodes.sh  test-single.sh  test.sh
angular/admin-ui/: README.md  angular.json  build.sh  package-lock.json  package.json  proxy.conf.js
angular/admin-ui/src/: index.html
angular/admin-ui/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  backend.service.ts  bootstrap.service.ts  icon.service.ts  idea.service.ts  idea.ts  info.service.ts  info.ts  me.service.ts  me.ts  media.service.ts  media.ts  node.ts  nodes.service.ts  policy-line.ts  policy.service.ts  policy.ts  site.service.ts  site.ts  socket.service.ts  stream.service.ts  stream.ts  team-member.ts  team.service.ts  team.ts  user.service.ts  user.ts
angular/admin-ui/src/app/add-group-policy-dialog/: add-group-policy-dialog.component.html  add-group-policy-dialog.component.spec.ts  add-group-policy-dialog.component.ts
angular/admin-ui/src/app/add-group-policy-exec-dialog/: add-group-policy-exec-dialog.component.css  add-group-policy-exec-dialog.component.html  add-group-policy-exec-dialog.component.spec.ts  add-group-policy-exec-dialog.component.ts
angular/admin-ui/src/app/add-member-dialog/: add-member-dialog.component.css  add-member-dialog.component.html  add-member-dialog.component.spec.ts  add-member-dialog.component.ts
angular/admin-ui/src/app/add-node-dialog/: add-node-dialog.component.html  add-node-dialog.component.spec.ts  add-node-dialog.component.ts
angular/admin-ui/src/app/add-stream-dialog/: add-stream-dialog.component.css  add-stream-dialog.component.html  add-stream-dialog.component.spec.ts  add-stream-dialog.component.ts
angular/admin-ui/src/app/add-team-dialog/: add-team-dialog.component.html  add-team-dialog.component.spec.ts  add-team-dialog.component.ts
angular/admin-ui/src/app/add-upstream-stream-dialog/: add-upstream-stream-dialog.component.html  add-upstream-stream-dialog.component.spec.ts  add-upstream-stream-dialog.component.ts
angular/admin-ui/src/app/add-upstream-team-dialog/: add-upstream-team-dialog.component.html  add-upstream-team-dialog.component.spec.ts  add-upstream-team-dialog.component.ts
angular/chat-ui/: README.md  angular.json  build.sh  package-lock.json  package.json  proxy.conf.js  run.sh  tsconfig.json
angular/chat-ui/src/: index.html
angular/chat-ui/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  backend.service.ts  bootstrap.service.ts  conversation.service.ts  idea.service.ts  idea.ts  item.ts  just-now.pipe.spec.ts  just-now.pipe.ts  me.service.ts  media.service.ts  new-idea.service.spec.ts  new-idea.service.ts  site.service.ts  socket.service.ts  sort-stream.pipe.spec.ts  sort-stream.pipe.ts  stream-open.service.spec.ts  stream-open.service.ts  stream-open.ts  stream.service.ts  stream.ts  team.ts  up.service.ts  user-list.service.ts  user.service.ts  user.ts
angular/login-ui/: README.md  angular.json  build.sh  package-lock.json  package.json
angular/login-ui/src/: index.html
angular/login-ui/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  backend.service.ts  fonts.css  login.service.ts  login.ts  message.ts  up.service.spec.ts  user.service.ts  window.service.ts
angular/shared-ui/: streambits.ts  streamflags.ts
ci/: kill.sh  killall.sh  ptree.sh  run.sh  upstream.sh  upstreamdb.sh
config/: mongoid.yml  services.rb
dsurf/: project.json
features/: add-from-upstream.feature  chat.feature  image.feature  local.feature  manual.feature  media.feature  nodes.feature  policy.feature  react-chat.feature  set-upstream.feature  share.feature  sites.feature  streams.feature  teams.feature  upstream.feature  users.feature
features/step_definitions/: admin.rb  conversations.rb  db.rb  material.rb  security.rb  steps.rb
features/support/: async_support.rb  env.rb  factories.rb  group.rb  hooks.rb  idea.rb  parse_date.rb  policy.rb  services.rb  stream.rb  user.rb
include/: cookie.hpp  date.hpp  etag.hpp  json.hpp  path.hpp  server.hpp  session.hpp  zmqclient.hpp
nginx/: test.conf
nodes-web.bbprojectd/: paul.bbprojectsettings  project.bbprojectdata  project.lockfile
react/chat-ui/: package-lock.json  package.json
react/chat-ui/src/: App.js  setupProxy.js
scripts/: build.sh  extract-ssl-cert.sh  new-cert.sh  nginx-nossl.tmpl  nginx.tmpl  nginxconf-nossl.sh  nginxconf.sh  nginxconfmac.sh  schema.json  start.sh  stop.sh
src/: cookie.cpp  date.cpp  etag.cpp  json.cpp  nodes-web.cpp  path.cpp  server.cpp  session.cpp  zchttp.cpp  zmqclient.cpp
src/handlers/: queryResult.cpp  sendIdeaWS.cpp  sendWS.cpp
src/handlers/delete/: group.cpp  groupusers.cpp  idea.cpp  media.cpp  node.cpp  rawuser.cpp  stream.cpp
src/handlers/get/: canreg.cpp  content.cpp  conversation.cpp  fonts.cpp  group.cpp  grouppolicy.cpp  groups.cpp  groupusers.cpp  ideaspurgecount.cpp  infos.cpp  login.cpp  logout.cpp  me.cpp  node.cpp  nodes.cpp  rawgroup.cpp  rawgrouppolicy.cpp  rawgroups.cpp  rawgroupusers.cpp  rawmedia.cpp  rawsites.cpp  rawstream.cpp  rawstreampolicy.cpp  rawstreams.cpp  rawuser.cpp  rawusers.cpp  root.cpp  site.cpp  sites.cpp  stream.cpp  streampolicygroups.cpp  streampolicyusers.cpp  streams.cpp  streamsharelink.cpp  user.cpp  users.cpp  websocket.cpp
src/handlers/post/: groups.cpp  groupusers.cpp  ideas.cpp  infos.cpp  login.cpp  mediaupload.cpp  newuser.cpp  rawgroups.cpp  rawmedia.cpp  rawstream.cpp  rawstreams.cpp  rawusers.cpp  streams.cpp  typing.cpp  users.cpp
src/handlers/put/: site.cpp  sites.cpp  user.cpp
ssl/: install-local-cert.sh  install-pi-cert.sh  local.visualops.com.cert.tgz  local.visualops.com.certa.tgz  pi.visualops.com.cert.tgz  pi.visualops.com.certa.tgz
test/: testcookie.cpp  testdate.cpp  testjson.cpp  testpath.cpp  testsession.cpp
wasm/: hello.wasm
zchttp.bbprojectd/: paul.bbprojectsettings  project.bbprojectdata  project.lockfile
(+116 files in other folders)
